# Engine

./: README.md  build.bat
Engine/: CMakeLists.txt  README.md
Engine/include/app/: app.hpp
Engine/include/assets/piano/: piano.hpp
Engine/include/audio/: audio.hpp  mixer.hpp
Engine/include/config/: resource_paths.hpp
Engine/include/inputs/: keyboard.hpp
Engine/include/renderer/: renderer.hpp
Engine/include/settings/: settings.hpp
Engine/resources/: gameData.data
Engine/src/: main.cpp  renderer.cpp  settings.cpp
Engine/src/app/: app.cpp
Engine/src/application/: application.cpp  application.hpp
Engine/src/assets/piano/: music.cpp  piano.cpp
Engine/src/audio/: audio.cpp  mixer.cpp
Engine/src/inputs/: keyboard.cpp
Engine/src/renderer/: renderer.cpp  save.txt
cmakeSetup-master/: CMakeLists.txt
cmakeSetup-master/resources/: gameData.data
resources/: graphics_config.txt  settings.txt
